src_idf/build/log/idf_py_stdout_output_95447
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/src_idf/build/bootloader/esp-idf/esptool_py && /Users/jessegreene/.espressif/python_env/idf5.1_py3.13_env/bin/python /Users/jessegreene/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/src_idf/build/bootloader/bootloader.bin
Bootloader binary size 0x51f0 bytes. 0x2e10 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/web_server/CMakeFiles/__idf_web_server.dir/web_server.c.obj
FAILED: esp-idf/web_server/CMakeFiles/__idf_web_server.dir/web_server.c.obj 
/Users/jessegreene/.espressif/tools/xtensa-esp32s3-elf/esp-12.2.0_20230208/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/src_idf/build/config -I/Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/src_idf/components/web_server/include -I/Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/include -I/Users/jessegreene/esp-idf/components/newlib/platform_include -I/Users/jessegreene/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/jessegreene/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/jessegreene/esp-idf/components/freertos/esp_additions/include/freertos -I/Users/jessegreene/esp-idf/components/freertos/esp_additions/include -I/Users/jessegreene/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/Users/jessegreene/esp-idf/components/esp_hw_support/include -I/Users/jessegreene/esp-idf/components/esp_hw_support/include/soc -I/Users/jessegreene/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/jessegreene/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/jessegreene/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/Users/jessegreene/esp-idf/components/heap/include -I/Users/jessegreene/esp-idf/components/log/include -I/Users/jessegreene/esp-idf/components/soc/include -I/Users/jessegreene/esp-idf/components/soc/esp32s3 -I/Users/jessegreene/esp-idf/components/soc/esp32s3/include -I/Users/jessegreene/esp-idf/components/hal/esp32s3/include -I/Users/jessegreene/esp-idf/components/hal/include -I/Users/jessegreene/esp-idf/components/hal/platform_port/include -I/Users/jessegreene/esp-idf/components/esp_rom/include -I/Users/jessegreene/esp-idf/components/esp_rom/include/esp32s3 -I/Users/jessegreene/esp-idf/components/esp_rom/esp32s3 -I/Users/jessegreene/esp-idf/components/esp_common/include -I/Users/jessegreene/esp-idf/components/esp_system/include -I/Users/jessegreene/esp-idf/components/esp_system/port/soc -I/Users/jessegreene/esp-idf/components/esp_system/port/include/private -I/Users/jessegreene/esp-idf/components/xtensa/include -I/Users/jessegreene/esp-idf/components/xtensa/esp32s3/include -I/Users/jessegreene/esp-idf/components/lwip/include -I/Users/jessegreene/esp-idf/components/lwip/include/apps -I/Users/jessegreene/esp-idf/components/lwip/include/apps/sntp -I/Users/jessegreene/esp-idf/components/lwip/lwip/src/include -I/Users/jessegreene/esp-idf/components/lwip/port/include -I/Users/jessegreene/esp-idf/components/lwip/port/freertos/include -I/Users/jessegreene/esp-idf/components/lwip/port/esp32xx/include -I/Users/jessegreene/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/jessegreene/esp-idf/components/esp_http_server/include -I/Users/jessegreene/esp-idf/components/http_parser -I/Users/jessegreene/esp-idf/components/esp_event/include -I/Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/src_idf/components/wifi_manager/include -I/Users/jessegreene/esp-idf/components/esp_wifi/include -I/Users/jessegreene/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/jessegreene/esp-idf/components/esp_phy/include -I/Users/jessegreene/esp-idf/components/esp_phy/esp32s3/include -I/Users/jessegreene/esp-idf/components/esp_netif/include -I/Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/src_idf/components/nvs_manager/include -I/Users/jessegreene/esp-idf/components/nvs_flash/include -I/Users/jessegreene/esp-idf/components/spi_flash/include -I/Users/jessegreene/esp-idf/components/esp_partition/include -I/Users/jessegreene/esp-idf/components/app_update/include -I/Users/jessegreene/esp-idf/components/bootloader_support/include -I/Users/jessegreene/esp-idf/components/bootloader_support/bootloader_flash/include -I/Users/jessegreene/esp-idf/components/esp_app_format/include -I/Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/src_idf/components/log_buffer -I/Users/jessegreene/esp-idf/components/esp_timer/include -I/Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/src_idf/components/sip_client/include -I/Users/jessegreene/esp-idf/components/mbedtls/port/include -I/Users/jessegreene/esp-idf/components/mbedtls/mbedtls/include -I/Users/jessegreene/esp-idf/components/mbedtls/mbedtls/library -I/Users/jessegreene/esp-idf/components/mbedtls/esp_crt_bundle/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/src_idf=. -fmacro-prefix-map=/Users/jessegreene/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/web_server/CMakeFiles/__idf_web_server.dir/web_server.c.obj -MF esp-idf/web_server/CMakeFiles/__idf_web_server.dir/web_server.c.obj.d -o esp-idf/web_server/CMakeFiles/__idf_web_server.dir/web_server.c.obj -c /Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/src_idf/components/web_server/web_server.c
/Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/src_idf/components/web_server/web_server.c: In function 'find_asset':
/Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/src_idf/components/web_server/web_server.c:60:57: error: '.html' directive output may be truncated writing 5 bytes into a region of size between 1 and 64 [-Werror=format-truncation=]
   60 |         snprintf(filename_buf, sizeof(filename_buf), "%s.html", filename);
      |                                                         ^~~~~
/Users/jessegreene/Documents/PlatformIO/Projects/esp32-s3-doorbell/src_idf/components/web_server/web_server.c:60:9: note: 'snprintf' output between 6 and 69 bytes into a destination of size 64
   60 |         snprintf(filename_buf, sizeof(filename_buf), "%s.html", filename);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
